# rag-system

./: .dockerignore  .env.template  .gitignore  Dockerfile.api  Dockerfile.streamlit  README.md  docker-compose.yml  init_repo.py  prometheus.yml  pyproject.toml  render.yaml  streamlit_app.py
.github/workflows/: docker.yml
data/: app.db
data/eval/: queries.jsonl
data/raw_docs/: sample.txt
k8s/: api-deployment.yaml  api-service.yaml  app-configmap.yaml  app-secret.example.yaml  redis-deployment.yaml  streamlit-deployment.yaml  streamlit-service.yaml  weaviate-deployment.yaml  weaviate-service.yaml
k8s/monitoring/: grafana-deployment.yaml  prometheus-configmap.yaml  prometheus-deployment.yaml
scripts/: eval_offline.py  ingest_docs.py  mcp_server.py
src/enterprise_rag_system/app/: main.py
src/enterprise_rag_system/app/api/: query.py
src/enterprise_rag_system/app/observability/: langfuse.py  ratelimit.py
src/enterprise_rag_system/app/retrieval/: reranker.py  vector.py
src/rag_system/app/: main.py
src/rag_system/app/api/: ingest.py  query.py  session.py
src/rag_system/app/generation/: __init__.py  agentic.py
src/rag_system/app/observability/: logging.py  metrics.py
src/rag_system/app/response/: context_builder.py
src/rag_system/app/retrieval/: bm25_retriever.py  chunking.py  embeddings.py  faiss_store.py  schema.py  vector.py  vector_retriever.py
tests/: test_context_builder.py  test_query_endpoint.py  test_ratelimit.py
