[project]
name = "enterprise-rag-system"
version = "0.1.0"
description = "Enterprise RAG system with access-aware retrieval and evaluation"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Rizwan" }
]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",

    "langchain>=0.1",
    "langgraph>=0.0.30",
    "openai>=1.12",

    "weaviate-client>=4.5",
    "rank-bm25>=0.2",

    "langfuse>=2.20",
    "arize-phoenix>=4.0",

    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "black>=24.2",
]

[tool.ruff]
line-length = 88
target-version = "py310"

select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
